# ncnn

./: .gitmodules  CMakeLists.txt
cmake/: Dependencies.cmake
examples/: squeezenet.cpp
layerTest/: CMakeLists.txt  Test_conv_eigen.cpp  Test_deconv_eigen.cpp  benchlayer.h  bnormal_benchmark.cpp  conv_benchmark.cpp  deconv_benchmark.cpp  eltwise_benchmark.cpp  prelu_benchmark.cpp
meitu_build/: android_build.sh
src/: CMakeLists.txt  benchmark.cpp  benchmark.h  debug_model.cpp  debug_model.h  eigen.h  im2col.cpp  im2col.h  layer.cpp  layer.h  mat.h  model_caffe.cpp  model_caffe.h  net.cpp  net.h  platform.h.in
src/layer/: convolution.cpp  convolution.h  deconvolution.cpp  deconvolution.h  input.cpp  input.h  pooling.cpp  pooling.h  slice.cpp  upsample.cpp  upsample.h
src/layer/arm/: absval_arm.cpp  batchnorm_arm.cpp  convolution_1x1.h  convolution_2x2.h  convolution_3x3.h  convolution_4x4.h  convolution_5x5.h  convolution_7x7.h  convolution_arm.cpp  convolutiondepthwise_3x3.h  convolutiondepthwise_arm.cpp  deconvolution_3x3.h  deconvolution_4x4.h  deconvolution_arm.cpp  deconvolutiondepthwise_arm.cpp  eltwise_arm.cpp  innerproduct_arm.cpp  pooling_2x2.h  pooling_3x3.h  pooling_arm.cpp  pooling_arm.h  prelu_arm.cpp  relu_arm.cpp  slice_arm.cpp
src/layer/eigen/: deconvolution_eigen.cpp  deconvolution_eigen.h
src/layer/x86/: convolution_1x1.h  convolutiondepthwise_x86.cpp
tools/caffe/: CMakeLists.txt  caffe.proto  caffe2ncnn.cpp
tools/mxnet/: mxnet2ncnn.cpp
